Changes for Perl extension DBD-SQLite

1.33 to be released
    - Updated to SQLite 3.7.6.3 (ISHIGAKI)

1.32_03 Thu 12 May 2011
    - Updated to SQLite 3.7.6.2 (ISHIGAKI)
    - Resolved #67843 for DBD-SQLite: savepoint rollback alters AC
      state (ISHIGAKI)

1.32_02 Mon 7 Mar 2011
    - Updated to SQLite 3.7.5 (ISHIGAKI)
    - Resolved #65267 for DBD-SQLite: Add RTree support option;
      skip fts3/metadata tests if those features are disabled
      (ISHIGAKI)
    - Resolved #65267: Add RTree support option (CJFIELDS)
    - Added sqlite_see_if_its_a_number database handle attribute
      to deal with issues caused by (quoted) bind values against
      numbers such as return values from a function etc. (ISHIGAKI)

1.32_01 Fri 10 Dec 2010
    - Made util/getsqlite.pl work with the amalg distro filename changes
      introd by SQLite 3.7.4, and still with older ones also (DUNCAND)
    - Updated to SQLite 3.7.4 (DUNCAND)
    - Resolved #61355: Fails testing in parallel (ISHIGAKI)
    - Resolved #61361: Problems building 1.31 with system SQLite (ISHIGAKI)
    - Resolved #61117: Supporting database as an alias for dbname in
      DSN (ISHIGAKI)
    - Resolved #62370: Segfaults during operations on disconnected
      handles (ISHIGAKI)
    - Resolved #61958: REGEXP should return NULL when one of its
      arguments is NULL (ISHIGAKI)
    - Removed PrintWarn tweak introduced in 1.19_09 (Tim Bunce's
      advice) (ISHIGAKI)

1.31 Wed 15 Sep 2010
    - Production release, identical to 1.30_06

1.30_06 Thu  9 Sep 2010
    - Resolved # 60860: Slow but steady memory leak on
      last_insert_id calls (ISHIGAKI)
    - Moved DBD::SQLite::FTS3Transitional into a dedicated dist (DAMI)
    - Updated bundled Test::NoWarnings to 1.02 (ADAMK)
    - Slightly bumped Test::More and added Test::Builder dependencies,
      because they are inherited from the bundled Test::NoWarnings (ADAMK)
    - Upgraded ppport.h to the latest version (ADAMK)

1.30_05 Fri 27 Aug 2010